--- a/ford-car/css/style.css
+++ b/ford-car/css/style.css
@@ -10,7 +10,7 @@
 
 /* -------------------------------------------- */
 body {
-   background-color: #323141;
+   background-color: #414143;
    color: #fff;
    font-family: 'Montserrat', sans-serif;
 }
@@ -49,7 +49,7 @@ body {
 
 /* =============== CAR ======================= */
 .section__container {
-  background: url('../img/bg.webp') bottom 17% left 40% / cover no-repeat;
+   background: url('../img/bg.webp') bottom 13% left 43% / auto no-repeat;
    position: relative;
    padding: 50px;
    min-height: 500px;
@@ -186,6 +186,17 @@ body {
    height: 100%;
 }
 
+/* NEON------------------------------- */
+.lower-path__body::after {
+   content: '';
+   position: absolute;
+   bottom: 30px;
+   left: 47px;
+   width: 590px;
+   height: 0px;
+   box-shadow: 0px 0px 11px 4px rgb(252, 168, 2);
+}
+
 .lower-path__front {
    position: absolute;
    left: 23px;
@@ -222,7 +233,7 @@ body {
    box-shadow: 8px -6px 11px -10px inset #000;
 }
 
-.lower-path__center {
+.lower-path__center-back {
    position: absolute;
    right: 5px;
    bottom: 35px;
@@ -232,7 +243,7 @@ body {
    background-color: rgb(252, 168, 2);
 }
 
-.lower-path__center::after {
+.lower-path__center-back::after {
    content: '';
    position: absolute;
    top: -5px;
@@ -242,6 +253,17 @@ body {
    background-color: rgb(252, 168, 2);
    border-radius: 50%;
    transform: rotate(312deg);
+}
+
+.lower-path__exhaust {
+   position: absolute;
+   bottom: 37px;
+   right: 23px;
+   width: 50px;
+   height: 12px;
+   background-color: #dddbdb;
+   border-radius: 2px;
+   box-shadow: 4px -4px 4px -2px inset #000000, 10px 5px 4px 1px inset #0a0a0a;
 }
 
 .lower-path__decor {
@@ -266,6 +288,27 @@ body {
 
 .decor__end {
    flex: 1 0 auto;
+}
+
+.decor__outline {
+   position: absolute;
+   top: 18px;
+   left: 24px;
+   width: 39px;
+   height: 47px;
+   border-radius: 61px 78px 0px 6px / 42px 24px 0px 6px;
+   transform: skew(15deg);
+   box-shadow: 1px 0px 2px -1px rgb(48 48 48 / 45%);
+}
+
+.decor__outline::before {
+   content: '';
+   position: absolute;
+   right: -20px;
+   bottom: -4px;
+   width: 20px;
+   height: 3px;
+   box-shadow: 0px -1px 2px -1px rgb(48 48 48 / 45%);
 }
 
 .headlight {
@@ -426,15 +469,56 @@ body {
    color: rgb(252, 168, 2);
 }
 
-.decor__shadow {
+.decor__gradient {
    position: absolute;
-   top: 21px;
+   top: 15px;
    left: 50px;
    width: 420px;
-   height: 46px;
+   height: 55px;
    transform: rotate(359deg);
-   background-color: transparent;
+   background-color: rgba(0, 0, 0, 0);
    box-shadow: -367px 0px 91px -80px inset rgb(252, 168, 2);
+}
+
+.decor__shadow-start-center {
+   position: absolute;
+   top: 0px;
+   left: -159px;
+   width: 450px;
+   height: 21px;
+   overflow: hidden;
+   transform: rotate(-0.5deg);
+}
+
+.decor__shadow-start-center::before {
+   content: '';
+   position: absolute;
+   top: 22px;
+   left: 0;
+   width: 420px;
+   height: 5px;
+   box-shadow: 3px 1px 5px 0px rgba(48, 48, 48, 0.812);
+}
+
+.decor__shadow-center {
+   position: absolute;
+   top: -12px;
+   right: 17px;
+   width: 189px;
+   height: 13px;
+   overflow: hidden;
+}
+
+.decor__shadow-center::before {
+   content: '';
+   position: absolute;
+   top: 6px;
+   left: -20px;
+   width: 228px;
+   height: 50px;
+   border-radius: 108px 0px 0px 0px / 22px 0px 0px 0px;
+   transform: rotate(4deg);
+   box-shadow: 0px 1px 5px -2px inset #00000070;
 }
 
 .black-triangle {
@@ -860,3 +944,19 @@ body {
    background-color: rgb(49 48 48);
    transform: scaleX(3);
 }
+
+/* .upper-path {
+   opacity: 0;
+}
+
+.lower-path {
+   opacity: 0;
+}
+
+.car__door {
+   opacity: 0;
+}
+
+.side-window {
+   opacity: 0;
+} */
