--- a/ford-car/css/style.css
+++ b/ford-car/css/style.css
@@ -10,7 +10,7 @@
 
 /* -------------------------------------------- */
 body {
-   background-color: #414143;
+   background-color: #26262d;
    color: #fff;
    font-family: 'Montserrat', sans-serif;
 }
@@ -148,8 +148,8 @@ body {
    left: -2px;
    width: 141px;
    height: 7px;
-   box-shadow: 0px -4px 1px 0px inset #2a2a2a;
-   border-radius: 7px;
+   box-shadow: -2px -4px 1px 0px inset #2a2a2a;
+   border-radius: 7px 7px 7px 7px;
    transform: rotate(15deg);
    display: flex;
 }
@@ -184,6 +184,55 @@ body {
    position: relative;
    width: 100%;
    height: 100%;
+}
+
+.hood {
+   position: absolute;
+   top: -5px;
+   left: 112px;
+   width: 140px;
+   height: 15px;
+   transform: rotate(3deg);
+   overflow: hidden;
+}
+
+.hood::after {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 15px;
+   width: 100%;
+   height: 100%;
+   transform: rotate(-2deg);
+   box-shadow: -5px -11px 8px -3px inset rgba(0, 0, 0, 0.641);
+   border-radius: 14px 0 0 0;
+}
+
+.hood__decor {
+   width: 100%;
+   height: 100%;
+}
+
+.hood__decor::before {
+   content: '';
+   position: absolute;
+   bottom: 0;
+   left: -25px;
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+   background-color: rgb(252 106 2 / 0%);
+   box-shadow: 10px 0px 0px 7px rgb(252, 168, 2);
+}
+
+.hood__decor::after {
+   content: '';
+   position: absolute;
+   top: 0;
+   right: 0;
+   width: 80%;
+   height: 100%;
+   background-color: rgb(252, 168, 2);
 }
 
 /* NEON------------------------------- */
