--- a/ford-car/css/style.css
+++ b/ford-car/css/style.css
@@ -35,78 +35,21 @@
    }
 }
 
+@keyframes translate {
+   0% {
+      transform: translateX(-100%);
+   }
+   100% {
+      transform: translateX(0%);
+   }
+}
+
 @keyframes width {
    0% {
       width: 0px;
    }
    100% {
       width: 32px;
-   }
-}
-
-@keyframes linear-gradient {
-   0% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 0%, rgba(0, 0, 0, 0) 5%);
-   }
-   5% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 5%, rgba(0, 0, 0, 0) 10%);
-   }
-   10% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 10%, rgba(0, 0, 0, 0) 15%);
-   }
-   15% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 15%, rgba(0, 0, 0, 0) 20%);
-   }
-   20% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 20%, rgba(0, 0, 0, 0) 25%);
-   }
-   25% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 25%, rgba(0, 0, 0, 0) 30%);
-   }
-   30% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 30%, rgba(0, 0, 0, 0) 30%);
-   }
-   35% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 35%, rgba(0, 0, 0, 0) 40%);
-   }
-   40% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 40%, rgba(0, 0, 0, 0) 45%);
-   }
-   45% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 45%, rgba(0, 0, 0, 0) 50%);
-   }
-   50% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 50%, rgba(0, 0, 0, 0) 55%);
-   }
-   55% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 55%, rgba(0, 0, 0, 0) 60%);
-   }
-   60% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 60%, rgba(0, 0, 0, 0) 65%);
-   }
-   65% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 65%, rgba(0, 0, 0, 0) 70%);
-   }
-   70% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 70%, rgba(0, 0, 0, 0) 75%);
-   }
-   75% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 75%, rgba(0, 0, 0, 0) 80%);
-   }
-   80% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 80%, rgba(0, 0, 0, 0) 85%);
-   }
-   85% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 85%, rgba(0, 0, 0, 0) 90%);
-   }
-   90% {
-      background: linear-gradient(90deg, rgb(252, 168, 2) 90%, rgba(0, 0, 0, 0) 95%);
-   }
-   95% {
-      background: linear-gradient(95deg, rgb(252, 168, 2) 95%, rgba(0, 0, 0, 0) 100%);
-   }
-   100% {
-      background: linear-gradient(0deg, rgb(252, 168, 2) 100%, rgba(0, 0, 0, 0) 100%);
    }
 }
 
@@ -557,19 +500,19 @@ body {
    transform: scale(1) translateZ(-1px);
    transform: scaleX(0.9) translateZ(-1px) rotate(1deg);
 }
-.decor__wrapper-applique-center {
+.decor__wrapper-picture-center {
    position: relative;
    padding-top: 26px;
    transform: rotate(-0.5deg);
 }
 
-.applique-center {
+.picture-center {
    width: 460px;
    height: 60px;
    transform: skewX(20deg);
 }
 
-.applique-center__dark-block {
+.picture-center__dark-block {
    width: 100%;
    height: 100%;
    padding: 5px 0 8px 35px;
@@ -577,9 +520,9 @@ body {
    background-color: #303030;
 }
 
-.applique-center__first-transparent-block,
-.applique-center__second-transparent-block,
-.applique-center__third-transparent-block {
+.picture-center__first-transparent-block,
+.picture-center__second-transparent-block,
+.picture-center__third-transparent-block {
    width: 100%;
    height: 100%;
    padding: 2px 0 2px 2px;
@@ -590,12 +533,12 @@ body {
    background-color: rgb(252, 168, 2);
 }
 
-.applique-center__second-transparent-block {
+.picture-center__second-transparent-block {
    border: none;
    border-radius: 6px 0px 0px 6px;
 }
 
-.applique-center__text {
+.picture-center__text {
    position: absolute;
    font-size: 12px;
    font-weight: 900;
@@ -603,13 +546,13 @@ body {
    padding: 0px 4px;
 }
 
-.applique-center__text--dark {
+.picture-center__text--dark {
    top: 13px;
    left: -1px;
    color: #303030;
    background-color: rgb(252, 168, 2);
 }
-.applique-center__text--yellow {
+.picture-center__text--yellow {
    top: 25px;
    left: 5px;
    letter-spacing: 1px;
@@ -1107,9 +1050,6 @@ body {
    justify-content: center;
    width: 90px;
    height: 90px;
-   border-radius: 50%;
-   border: 2px solid rgb(252, 106, 2);
-   animation: linear-gradient 700ms linear forwards 300ms;
 }
 
 .indicator__item:not(:last-child)::after {
@@ -1119,5 +1059,47 @@ body {
    left: 100%;
    height: 2px;
    background-color: rgb(252, 106, 2);
-   animation: width 700ms linear forwards 1000ms;
+   animation: width 700ms linear forwards 1200ms;
+}
+
+.indicator__border {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+   overflow: hidden;
+   background-color: transparent;
+}
+
+.indicator__border:after {
+   content: '';
+   width: 100%;
+   height: 100%;
+   background-color: rgb(252, 106, 2);
+   animation: translate 1000ms linear both 200ms;
+}
+
+.indicator__bg {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   width: 94%;
+   height: 94%;
+   border-radius: 50%;
+   overflow: hidden;
+}
+
+.indicator__bg:after {
+   content: '';
+   width: 100%;
+   height: 100%;
+   background-color: rgb(252, 168, 2);
+   animation: translate 1000ms linear both;
+}
+
+.indicator__text {
+   position: relative;
 }
